@@ -673,7 +673,20 @@ span.span_related-activity,
 span.span_recipient-country,
 span.span_policy-marker,
 span.span_recipient-region,
-span.span_location	{position:relative;}	
+span.span_location,
+span.span_transaction_code_1,
+span.span_transaction_code_2,
+span.span_transaction_code_3,
+span.span_transaction_code_4,
+span.span_transaction_code_5,
+span.span_transaction_code_6,
+span.span_transaction_code_7,
+span.span_transaction_code_8,
+span.span_transaction_code_9,
+span.span_transaction_code_10,
+span.span_transaction_code_11,
+span.span_transaction_code_12,
+span.span_transaction_code_13	{position:relative;}	
 span.hide		 	{display:block; position:absolute; top:35px; right:40px; font-size:12px; color:#CCC; line-height:24px; letter-spacing:1px;}
 span.hide:hover	 	{cursor:pointer; color:#FFF;}
 
@@ -681,10 +694,24 @@ span.span_transaction span.hide,
 span.span_planned-disbursement span.hide,
 span.span_budget span.hide,
 span.span_result span.hide,
-span.span_result result span.hide 				{top:15px;}
+span.span_result result span.hide				{top:15px;}
 span.span_result result:nth-child(1) span.hide	{top:-5px;}
 span.span_related-activity span.hide,
 span.span_policy-marker span.hide				{right:0;}
+
+span.span_transaction_code_1 span.hide,
+span.span_transaction_code_2 span.hide,
+span.span_transaction_code_3 span.hide,
+span.span_transaction_code_4 span.hide,
+span.span_transaction_code_5 span.hide,
+span.span_transaction_code_6 span.hide,
+span.span_transaction_code_7 span.hide,
+span.span_transaction_code_8 span.hide,
+span.span_transaction_code_9 span.hide,
+span.span_transaction_code_10 span.hide,
+span.span_transaction_code_11 span.hide,
+span.span_transaction_code_12 span.hide,
+span.span_transaction_code_13 span.hide		{top:6px; z-index:10;}
 
 
 /*	Count
@@ -703,6 +730,30 @@ span.span_location span.length				{left:135px;}
 span.sector_img span.length					{top:20px; left:105px;}
 span.country_img span.length				{top:20px; left:205px;}
 span.span_recipient-region span.length		{left:115px;}
+
+span.span_transaction_code_1 span.length,
+span.span_transaction_code_2 span.length,
+span.span_transaction_code_3 span.length,
+span.span_transaction_code_4 span.length,
+span.span_transaction_code_5 span.length,
+span.span_transaction_code_6 span.length,
+span.span_transaction_code_7 span.length,
+span.span_transaction_code_8 span.length,
+span.span_transaction_code_9 span.length,
+span.span_transaction_code_10 span.length,
+span.span_transaction_code_11 span.length,
+span.span_transaction_code_12 span.length,
+span.span_transaction_code_13 span.length	{top:8px; left:170px; z-index:10;}
+
+span.span_transaction_code_1 span.length,
+span.span_transaction_code_3 span.length,
+span.span_transaction_code_4 span.length,
+span.span_transaction_code_9 span.length,
+span.span_transaction_code_12 span.length,
+span.span_transaction_code_13 span.length	{left:150px;}
+
+span.span_transaction_code_2 span.length,
+span.span_transaction_code_11 span.length	{left:200px;}
 
 
 /*	Chartist SVG
