@@ -1,3 +1,9 @@
+Development Portal (2019-01-06 shi)
+==============================
+Add transaction-type count and hide buttons
+
+
+
 Development Portal (2019-01-05 shi)
 ==============================
 Fix transaction count for new sections
